Updated ARP scan to work on Linux/Unix and Windows.